# tr1200_ros

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yaml
tr1200_base/: CMakeLists.txt  package.xml  tr1200_base.xml
tr1200_base/include/tr1200_base/: can.hpp  driver.hpp  driver_version.hpp  hardware.hpp  logging.hpp
tr1200_base/src/: hardware.cpp
tr1200_control/: CMakeLists.txt  package.xml
tr1200_control/config/: tr1200_controllers.yaml
tr1200_control/launch/: control.launch.py
tr1200_controllers/: CMakeLists.txt  package.xml  plugin_description.xml
tr1200_controllers/include/tr1200_controllers/: rc_state_sensor.hpp  tr1200_rc_state_broadcaster.hpp
tr1200_controllers/src/: tr1200_rc_state_broadcaster.cpp  tr1200_rc_state_broadcaster_parameters.yaml
tr1200_description/: CMakeLists.txt  package.xml
tr1200_description/launch/: description.launch.py
tr1200_description/urdf/: tr1200.ros2_control.xacro  tr1200.urdf.xacro  tr1200_base.urdf.xacro  wheel.urdf.xacro
tr1200_modules/: package.xml  setup.cfg  setup.py
tr1200_modules/tr1200_modules/: launch.py
tr1200_msgs/: CMakeLists.txt  package.xml
tr1200_msgs/msg/: RcState.msg  RcStateStamped.msg  RcSwitchState.msg
tr1200_ros/: CMakeLists.txt  package.xml
tr1200_teleop/: CMakeLists.txt  package.xml
tr1200_teleop/launch/: keyop.launch.py
