<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tr1200_control</name>
  <version>1.0.4</version>
  <description>The TR1200 control package</description>
  <maintainer email="trsupport@trossenrobotics.com">Trossen Robotics</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>launch_ros</depend>
  <depend>launch</depend>
  <depend>tr1200_base</depend>
  <depend>tr1200_description</depend>
  <depend>tr1200_modules</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
