<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tr1200_controllers</name>
  <version>1.0.4</version>
  <description>The TR1200 controllers package</description>
  <maintainer email="trsupport@trossenrobotics.com">Trossen Robotics</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>generate_parameter_library</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>tr1200_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
