<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tr1200_ros</name>
  <version>1.0.1</version>
  <description>ROS 2 packages for the TR1200 Mobile Base from Trossen Robotics</description>
  <maintainer email="trsupport@trossenrobotics.com">Trossen Robotics</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tr1200_base</depend>
  <depend>tr1200_control</depend>
  <depend>tr1200_description</depend>
  <depend>tr1200_modules</depend>
  <depend>tr1200_teleop</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
